--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
     <!-- Is this all I need to do to create a form modal? -->
-    <div id="formModal"></div>
+    <div id="formModal" role="dialog"></div>
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
