added a modal from Bootstrap and erased div from HTML

--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
-    <!-- Is this all I need to do to create a form modal? -->
-    <div id="formModal" role="dialog"></div>
+    <!-- Does there need to be an id of "formModal" to match the data-bs-target? -->
+    <div class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
