attempted to format modal dialog form

--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
               <form action="#">
                 <!-- Need help formatting the modal dialog box, right now everything is stacked weirdly -->
                 <div class="row"></div>
-                <div class="col">
+                <div class="col-6">
                   <label for="task-title">Task Title</label>
                   <input type="text" id="task-title">
                 </div>
-                <div class="col">
+                <div class="col-6">
                   <label for="task-title">Task Due Date</label>
                   <input type="text" id="task-due-date">
                 </div>
-                <div class="col">
+                <div class="col-12">
                   <label for="task-description">Task Description</label>
                   <textarea name="task-description" id="task-description" cols="30" rows="10"></textarea>
                 </div>
