--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body container">
+              <div class="row justify-content-center"></div>
               <form action="#">
                 <!-- Need help formatting the modal dialog box, right now everything is stacked weirdly -->
-                <div class="row"></div>
-                <div class="col-6">
+                <div class="col-lg-6">
                   <label for="task-title">Task Title</label>
                   <input type="text" id="task-title">
                 </div>
-                <div class="col-6">
+                <div class="col-lg-6">
                   <label for="task-title">Task Due Date</label>
                   <input type="text" id="task-due-date">
                 </div>
-                <div class="col-12">
+                <div class="col-lg-12">
                   <label for="task-description">Task Description</label>
                   <textarea name="task-description" id="task-description" cols="30" rows="10"></textarea>
                 </div>
