--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Add Task</h5>
-              <button type="button" class="close" data-dismiss="#modal" aria-label="Close">
+              <button type="button" class="close" data-dismiss="#formModal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
@@ -54,8 +54,7 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary">Save changes</button>
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-success">Add Task</button>
             </div>
           </div>
         </div>
