attempted to fix datepicker, made sure to add id selectors where they are missing in JS

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 </div>
                 <div class="col-lg-6">
                   <label for="task-title">Task Due Date</label>
+                  <!-- Datepicker was working and now isn't working, it's in housekeeping inside of JS -->
                   <input type="text" id="task-due-date">
                 </div>
                 <div class="col-lg-12">
@@ -54,7 +55,7 @@
               </form>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-success">Add Task</button>
+              <button type="button" class="btn btn-success" id="add-task">Add Task</button>
             </div>
           </div>
         </div>
