--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <h5 class="modal-title">Add Task</h5>
-              <button type="button" class="close" data-dismiss="#formModal" aria-label="Close">
+              <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
